home page desktop view completed

--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -4,3 +4,15 @@
 
 
 $primary: #5533ff; // Thats a sample how you could change a BootStrap variable.
+$white: #fff;
+$black: #434A4E;
+$grey: #778283;
+$grey-300: #77828398;
+$secondary: #4DBDEB;
+$secondary-300: #DFEEEE;
+$primary: #FFD262;
+$navbar-toggler-font-size: 1.5rem;
+$headings-font-family: 'Roboto Slab', serif;
+$headings-font-weight: 300;
+$headings-margin-bottom: 0;
+$paragraph-margin-bottom: 0;
