--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,1 +1,250 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+
+// Breakpoints
+$xs: 0;
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+
+// Typography
+h1,
+.h1 {
+    font-size: 2.875rem;
+
+    @media (max-width: $md) {
+        font-size: 2.375rem;
+    }
+}
+
+h2,
+.h2 {
+    font-size: 2.25rem;
+
+    @media (max-width: $md) {
+        font-size: 1.875rem;
+    }
+}
+
+h3,
+.h3 {
+    font-size: 1.875rem;
+}
+
+h4,
+.h4 {
+    font-size: 1.625rem;
+}
+
+h5,
+.h5 {
+    font-size: 1.25rem;
+}
+
+h6,
+.h6 {
+    font-size: 1rem;
+}
+
+small,
+.text-small {
+    font-size: 0.875rem;
+    font-weight: bold;
+    @media (max-width: $md) {
+        font-size: 0.75rem;
+    }
+}
+
+.text-nav {
+    font-size: 1.25rem;
+    @media (max-width: $md) {
+        font-size: 1.125rem;
+
+    }
+}
+
+.text-button {
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 1.125rem;
+    color: #552600;
+    @media(max-width: $md) {
+        font-size: 1rem;
+    }
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+    line-height: 1.5;
+    @media (max-width: $md) {
+        font-size: 0.875rem;
+    }
+}
+
+// Global styles
+
+body {
+    padding: 1rem 0;
+}
+
+.btn {
+    padding: 12px 24px;
+    border-color: #E4B34F;
+    border-width: 2px 2px 5px 2px;
+}
+
+.wpcf7 input:not(:disabled):not(.disabled)[type=submit] {
+    padding: 0;
+    background-color: $primary;
+    color: #552600;
+}
+
+.wpcf7 input:not(:disabled):not(.disabled)[type=submit]:hover {
+    background-color: #ffc73c;
+    border-color: #ffc73c;
+}
+
+.form-control, .widget_archive select, .widget_categories select, .wpcf7 .wpcf7-validation-errors, .wpcf7 input[type=color], .wpcf7 input[type=date], .wpcf7 input[type=datetime-local], .wpcf7 input[type=datetime], .wpcf7 input[type=email], .wpcf7 input[type=file], .wpcf7 input[type=month], .wpcf7 input[type=number], .wpcf7 input[type=range], .wpcf7 input[type=search], .wpcf7 input[type=submit], .wpcf7 input[type=tel], .wpcf7 input[type=text], .wpcf7 input[type=time], .wpcf7 input[type=url], .wpcf7 input[type=week], .wpcf7 select, .wpcf7 textarea {
+    padding: 15px 18px 8px 18px;
+}
+
+.rotate-180 {
+    transform: rotate(-180deg);
+}
+
+// Header styles
+
+#main-nav {
+    .custom-logo-link {
+        width: 290px;
+        @media (max-width: $xl) {
+            width: 270px;
+        }
+        @media (max-width: $lg) {
+            width: 240px;
+        }
+        @media (max-width: $md) {
+            width: 220px;
+        }
+        img {
+            width: 100%;
+        }
+    }
+}
+
+// Footer styles
+.footer {
+    margin-top: 150px;
+
+    .menu-item {
+        a {
+            color: $black;
+        }
+    }
+}
+
+// Home Page Styles
+
+#home {
+    .hero {
+        height: 530px;
+        background: linear-gradient(rgba(#000, 0.6),rgba(#000, 0.6)),url('https://res.cloudinary.com/djoe/image/upload/f_auto,q_90,w_1440/v1609778891/Skyward%20Designs%20%28new%29/hero_xnnwzu.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+
+        p:first-of-type {
+            margin-top: 20px;
+        }
+
+        .btn {
+            margin-top: 32px;
+            margin-bottom: 25px;
+        }
+    }
+
+    .featured-top-section {
+        padding: 4rem 0 8rem 0;
+    }
+
+    .featured-bottom-section {
+        padding: 4rem 0 8rem 0;
+    }
+
+    .feature {
+        margin-top: 8rem;
+
+        &__title {
+            margin-bottom: 27px;
+        }
+
+        &__item:not(:last-of-type) {
+            margin-bottom: 21px;
+        }
+    }
+
+    .pricing-cta {
+        height: 530px;
+        background: linear-gradient(rgba(#000, 0.4),rgba(#000, 0.4)),url('https://res.cloudinary.com/djoe/image/upload/f_auto,q_90,w_1440/v1609785779/Skyward%20Designs%20%28new%29/pricebg_tdomoi.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+
+        .price-cta-card {
+            padding: 53px;
+
+            p {
+                margin-top: 24px;
+            }
+
+            .btn {
+                margin: 24px 0;
+            }
+        }
+    }
+
+    .cta-form {
+
+        p:first-of-type {
+            margin-top: 21px;
+        }
+
+        form {
+            text-align: left;
+
+            input[type=text],
+            input[type=email] {
+                margin-top: 14px;
+                border: 1px solid $black;
+                border-radius: 0;
+            }
+
+            input[type=text]:focus,
+            input[type=email]:focus {
+                box-shadow: 0 0 0.3rem 0.1rem $secondary;
+                border: 1px solid transparent;
+            }
+
+            input::placeholder {
+                font-style: italic;
+                color: $grey-300;
+                font-weight: 400;
+            }
+
+            label:first-of-type {
+                margin-top: 21px;
+            }
+
+            label {
+                margin-top: 15px;
+            }
+
+            input[type=submit] {
+                margin-top: 21px;
+                padding: 12px 24px;
+                height: auto;
+                width: 100%;
+            }
+        }
+    }
+}
