--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -2,14 +2,13 @@
 // To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder.
 // Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
 
-
-$primary: #5533ff; // Thats a sample how you could change a BootStrap variable.
+ // Thats a sample how you could change a BootStrap variable.
 $white: #fff;
 $black: #434A4E;
 $grey: #778283;
 $grey-300: #77828398;
 $secondary: #4DBDEB;
-$secondary-300: #DFEEEE;
+$secondary-300: #89d6f3;
 $primary: #FFD262;
 $navbar-toggler-font-size: 1.5rem;
 $headings-font-family: 'Roboto Slab', serif;
