contact page added

--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -9,6 +9,7 @@ $grey: #778283;
 $grey-300: #77828398;
 $secondary: #4DBDEB;
 $secondary-300: #89d6f3;
+$secondary-900: #0077B3;
 $primary: #FFD262;
 $navbar-toggler-font-size: 1.5rem;
 $headings-font-family: 'Roboto Slab', serif;
