--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -73,6 +73,10 @@ small,
     }
 }
 
+.text-secondary-900 {
+    color: $secondary-900;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     line-height: 1.5;
@@ -111,6 +115,20 @@ body {
 .rotate-180 {
     transform: rotate(-180deg);
 }
+
+.mt-30 {
+    margin-top: 30px;
+}
+
+.mt-25 {
+    margin-top: 25px;
+}
+
+.my-6 {
+    margin: 6px 0;
+}
+
+
 
 // Header styles
 
@@ -302,6 +320,49 @@ body {
                 padding: 12px 24px;
                 height: auto;
                 width: 100%;
+            }
+        }
+    }
+}
+
+// Contact page
+#contact {
+
+    .hero {
+        height: 530px;
+        background: linear-gradient(rgba(#000, 0.6),rgba(#000, 0.6)),url('https://res.cloudinary.com/djoe/image/upload/q_30,f_auto/v1609948335/contact-hero_a13y4b.jpg');
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+
+        h1 {
+            margin-top: -80px;
+        }
+
+        p:first-of-type {
+            margin-top: 20px;
+        }
+    }
+
+    .contact-boxes {
+        margin-top: -100px;
+
+        .contact-box {
+            padding: 65px 0;
+            max-width: 540px;
+
+            @media(max-width:$xl) {
+                max-width: 450px;
+            }
+
+            .fa {
+                font-size: 48px;
+            }
+
+            &--2 {
+                @media(max-width: $lg) {
+                    margin-top: 55px;
+                }
             }
         }
     }
