--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -163,6 +163,12 @@ body {
             color: $black;
         }
     }
+
+    .footer-nav {
+        @media(max-width:$sm) {
+            max-width: 230px;
+        }
+    }
 }
 
 // Home Page Styles
@@ -188,7 +194,7 @@ body {
             width: 100%;
 
             @media (max-width:$lg) {
-                width: 400px;
+                max-width: 400px;
             }
 
         }
