enable neg margin contact box mobile

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -361,6 +361,10 @@ body {
                 max-width: 450px;
             }
 
+            @media(max-width:$sm) {
+                max-width: 350px;
+            }
+
             .fa {
                 font-size: 48px;
             }
