--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -355,14 +355,10 @@ body {
 
         .contact-box {
             padding: 65px 0;
-            max-width: 540px;
+            max-width: 450px;
 
-            @media(max-width:$xl) {
-                max-width: 450px;
-            }
-
-            @media(max-width:$sm) {
-                max-width: 350px;
+            @media (min-width:$xl) {
+                max-width: 540px;
             }
 
             .fa {
