--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -395,12 +395,23 @@ body {
         .service-box {
             margin-top: 80px;
 
+            img {
+                max-height: 45px;
+                max-width: 65px;
+            }
+
             h3 {
-                margin-top: 33px;
+                margin-top: 25px;
             }
 
             p {
                 margin-top: 16px;
+
+                @media (max-width:$sm) {
+                    max-width: 250px;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
             }
         }
     }
