updated hero img url

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -336,7 +336,7 @@ body {
 
     .hero {
         height: 530px;
-        background: linear-gradient(rgba(#000, 0.6),rgba(#000, 0.6)),url('https://res.cloudinary.com/djoe/image/upload/q_30,f_auto/v1609948335/contact-hero_a13y4b.jpg');
+        background: linear-gradient(rgba(#000, 0.6),rgba(#000, 0.6)),url('https://res.cloudinary.com/djoe/image/upload/q_30,f_auto/v1610402556/Skyward%20Designs%20%28new%29/contact-hero_pmlb04.jpg');
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
