updated contact background image url

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -176,7 +176,7 @@ body {
 #home {
     .hero {
         height: 630px;
-        background: linear-gradient(rgba(#000, 0.6),rgba(#000, 0.6)),url('https://res.cloudinary.com/djoe/image/upload/f_auto,q_v1610402556/Skyward%20Designs%20%28new%29/contact-hero_pmlb04.jpg');
+        background: linear-gradient(rgba(#000, 0.6),rgba(#000, 0.6)),url('https://res.cloudinary.com/djoe/image/upload/f_auto,q_20/v1609797319/Skyward%20Designs%20%28new%29/hero_r2khib.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
