--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -16,3 +16,4 @@ $headings-font-family: 'Roboto Slab', serif;
 $headings-font-weight: 300;
 $headings-margin-bottom: 0;
 $paragraph-margin-bottom: 0;
+$navbar-light-color: $white;
