--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -17,3 +17,5 @@ $headings-font-weight: 300;
 $headings-margin-bottom: 0;
 $paragraph-margin-bottom: 0;
 $navbar-light-color: $white;
+$navbar-light-active-color: $primary;
+$navbar-light-hover-color: rgba($primary, 0.6);
