--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -12,6 +12,8 @@ $secondary-300: #89d6f3;
 $secondary-900: #0077B3;
 $primary: #FFD262;
 $navbar-toggler-font-size: 1.5rem;
+$font-family-base: 'Lato', sans-serif;
+$font-family-sans-serif: 'Lato';
 $headings-font-family: 'Roboto Slab', serif;
 $headings-font-weight: 300;
 $headings-margin-bottom: 0;
