pricing card styling

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -311,14 +311,23 @@ body {
 
         &__card {
             overflow: hidden;
-            height: 635px;
 
             @media(max-width:$md) {
                 max-width: 375px;
             }
 
+            @media (min-width: $md) {
+                height: 600px;
+            }
+
+            @media(min-width: $lg) {
+                transform: scale(0.94);
+                height: 635px;
+            }
+
             @media(min-width: $xl) {
                 transform: scale(0.94);
+                height: 595px;
             }
 
             &:hover {
@@ -345,7 +354,7 @@ body {
 
         &__header {
             width: 100%;
-            height: 216px;
+            min-height: 216px;
             background: radial-gradient(54.86% 54.86% at 50% 50%, #008CD2 0%, #00344F 100%);
             position: relative;
 
@@ -433,10 +442,15 @@ body {
                     right: -5%;
                 }
             }
+        }
 
-            &__footer {
-                flex: 1;
-            }
+        &__body {
+            position: relative;
+            z-index: 2;
+        }
+
+        &__footer {
+            flex: 1;
         }
     }
 
